# claude-code

src-rust/: Cargo.toml
src-rust/crates/bridge/src/: lib.rs
src-rust/crates/buddy/: Cargo.toml
src-rust/crates/buddy/src/: lib.rs
src-rust/crates/cli/src/: main.rs
src-rust/crates/commands/: Cargo.toml
src-rust/crates/commands/src/: lib.rs
src-rust/crates/core/: Cargo.toml
src-rust/crates/core/src/: ps_classifier.rs
src-rust/crates/core/tests/: test_mcp_templates.rs
src-rust/crates/mcp/: Cargo.toml
src-rust/crates/mcp/src/: lib.rs
src-rust/crates/plugins/src/: lib.rs  plugin.rs
src-rust/crates/query/: Cargo.toml
src-rust/crates/query/src/: agent_tool.rs  lib.rs
src-rust/crates/tools/src/: lib.rs  powershell.rs  tasks.rs  todo_write.rs  web_fetch.rs
src-rust/crates/tui/: Cargo.toml
src-rust/crates/tui/src/: kitty_image.rs  lib.rs  prompt_input.rs  render.rs  voice_capture.rs
src-rust/crates/tui/src/messages/: mod.rs
